--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ effort & money <span>into</span><br>
 	</div>
 </footer>
 
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script> 
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> 
 <script src="js/jquery.bxslider.js"></script>
 <script src="js/fixed-responsive-nav.js"></script> 
 <script src="js/waypoints.min.js"></script>
